--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "editorjs-text-alignment-blocktune",
+  "name": "editorjs-blocktunes",
   "version": "1.0.2",
   "main": "./dist/bundle.js",
   "license": "MIT",
   "keywords": [
     "codex editor",
     "paragraph",
-    "alignment",
+    "tunes",
     "tool",
     "editor.js",
     "editorjs"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kaaaaaaaaaaai/editorjs-alignment-blocktune.git"
+    "url": "https://github.com/ScaleMeUp/editorjs-blocktunes.git"
   },
   "scripts": {
     "build": "webpack --mode production",
@@ -30,10 +30,6 @@
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
   },
-  "bugs": {
-    "url": "https://github.com/kaaaaaaaaaaai/paragraph-with-alignment/issues"
-  },
-  "homepage": "https://github.com/kaaaaaaaaaaai/paragraph-with-alignment#readme",
   "directories": {
     "example": "example"
   },
